Adding all test file for all java file